# imdf-map-application

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.impeccable/: design.json
.superpowers/sdd/: task-10-report.md  task-6-report.md  task-7-report.md  task-9-report.md
core/: Cargo.toml
core/crates/kiriko-bundle/: Cargo.toml
core/crates/kiriko-bundle/examples/: compile_fixture.rs
core/crates/kiriko-bundle/src/: codec.rs  error.rs  export.rs  format.rs  lib.rs  sections.rs  synth.rs  synth_medial.rs
core/crates/kiriko-bundle/tests/: bundle.rs
core/crates/kiriko-bundle/tests/support/: mod.rs
core/crates/kiriko-facilities/: Cargo.toml
core/crates/kiriko-facilities/src/: build.rs  lib.rs  types.rs
core/crates/kiriko-model/: Cargo.toml
core/crates/kiriko-model/src/: archive.rs  canonical.rs  error.rs  geometry.rs  lib.rs  model.rs  normalize.rs
core/crates/kiriko-model/tests/: import_errors.rs  import_minimal.rs
core/crates/kiriko-model/tests/support/: mod.rs
core/crates/kiriko-node/: Cargo.toml  package.json
core/crates/kiriko-node/src/: lib.rs
core/crates/kiriko-route/: Cargo.toml
core/crates/kiriko-route/src/: build.rs  floor.rs  graph.rs  lib.rs  query.rs
core/crates/kiriko-wasm/: Cargo.toml  package.json
core/crates/kiriko-wasm/src/: lib.rs
deploy/: OPERATIONS.md  install-windows-service.ps1
docs/: gdb-data-reference.md
e2e/: embed.spec.ts  gallery.spec.ts  helpers.ts  issues.spec.ts  platform.spec.ts  viewer.performance.spec.ts  viewer.spec.ts  viewer.visual.spec.ts
scripts/: build-wasm.mjs
server/: app.test.ts  app.ts  auth.test.ts  auth.ts  cli.test.ts  cli.ts  main.ts  package.json  store.test.ts  store.ts  tsconfig.json  types.ts
server/src/: app.ts  config.ts  index.ts
server/test/: app.test.ts  auth.test.ts  blobs.test.ts  coreNative.test.ts  devSeed.test.ts  exportGdb.test.ts  gdal.test.ts  gdbFacilities.test.ts  gdbMapping.test.ts  gdbNetwork.test.ts  gdbRoutes.test.ts  gdbSmoke.test.ts  gdbSourceValidation.test.ts  gdbStaging.test.ts  helpers.ts  issuesMigration.test.ts  issuesRepository.test.ts  issuesRoutes.test.ts  issuesService.test.ts  issuesSse.test.ts  issuesValidation.test.ts  publish.test.ts  serve.test.ts  validateArchive.test.ts  venues.test.ts
src/: main.tsx
src/app/: App.test.tsx  App.tsx  app.css  viewerParams.test.ts  viewerParams.ts
src/bundle/: bundle.worker.test.ts  bundle.worker.ts  hydrateVenue.test.ts  hydrateVenue.ts  loadKirikoBundle.test.ts  loadKirikoBundle.ts  loadNetworkOverlay.ts  routeKirikoBundle.test.ts  routeKirikoBundle.ts  types.test.ts  types.ts  wasm.test.ts  wasm.ts
src/components/: AccountStatus.tsx  CategoryChips.tsx  CommentsPanel.test.tsx  CommentsPanel.tsx  ContextBar.tsx  DatasetGallery.test.tsx  DatasetGallery.tsx  ExplorerSidebar.tsx  FeatureDetails.tsx  FloatingPanel.tsx  FloatingSearch.test.tsx  FloatingSearch.tsx  FloorStack.tsx  GdbImportDialog.tsx  IconRail.tsx  ImdfDropzone.tsx  InspectorPanel.tsx  LayerControls.tsx  LayersPanel.tsx  LevelSwitcher.tsx  PublishDialog.test.tsx  PublishDialog.tsx  SearchBox.tsx  SearchPanel.tsx  SelectedFeatureContent.tsx  SelectedFeatureSheet.test.tsx  SelectedFeatureSheet.tsx  SignInDialog.test.tsx  SignInDialog.tsx  ThemeSwitcher.tsx  ViewerMenu.test.tsx  ViewerMenu.tsx  ViewerNotice.tsx  WarningsPanel.tsx  ZoomCluster.tsx  components.test.tsx  icons.tsx  resolveSelectedFeatureContent.ts  selectedFeatureContent.test.ts  selectedFeatureContent.ts
src/errors/: ArchiveError.ts  VenueLoadError.ts
src/gallery/: AddDataDialog.test.tsx  AddDataDialog.tsx  ConfirmDeleteModal.tsx  DatasetCard.test.tsx  DatasetCard.tsx  GalleryPage.tsx  GdbImportDialog.test.tsx  GdbImportDialog.tsx  SignInModal.tsx  UploadModal.tsx  api.test.ts  api.ts  gallery.test.tsx  signin.test.tsx  upload.test.tsx
src/gdb/: gdb.worker.test.ts  gdb.worker.ts  gdbMapping.test.ts  gdbMapping.ts  gdbSourceValidation.test.ts  gdbSourceValidation.ts  loadGdb.test.ts  loadGdb.ts  planValidation.test.ts  planValidation.ts  types.ts
src/imdf/: archiveLimits.ts  fetchImdfArchive.test.ts  fetchImdfArchive.ts  geometryCenter.test.ts  geometryCenter.ts  imdf.worker.ts  imdfArchive.test.ts  loadImdfArchive.ts  localize.ts  normalizeVenue.test.ts  normalizeVenue.ts  types.ts  venueSnapshot.test.ts  venueSnapshot.ts  viewerEnrichment.test.ts  viewerEnrichment.ts
src/issues/: IssueComposer.tsx  IssueDetail.tsx  IssueQueue.tsx  IssuesPanel.test.tsx  IssuesPanel.tsx  MarkdownBody.test.tsx  MarkdownBody.tsx  api.test.ts  api.ts  issueDates.test.ts  issueDates.ts  issueReducer.test.ts  issueReducer.ts  types.ts  useIssueSync.test.tsx  useIssueSync.ts
src/map/: IndoorMap.test.tsx  IndoorMap.tsx  buildIndoorStyle.ts  buildRenderFeatures.test.ts  buildRenderFeatures.ts  color2.test.ts  color2.ts  facilityFeatures.test.ts  facilityFeatures.ts  facilityIcons.ts  featureLayers.test.ts  featureLayers.ts  gdbMarkerIcons.test.ts  gdbMarkerIcons.ts  layerGroups.ts  markerIcons.ts  networkConnectivity.test.ts  networkFeatures.test.ts  networkFeatures.ts  routeFeatures.test.ts  routeFeatures.ts  useFeatureMarkers.test.ts  useFeatureMarkers.ts  useIssuePins.test.ts  useIssuePins.ts  useSelectedFeaturePopup.test.tsx  useSelectedFeaturePopup.tsx  visibility.test.ts  visibility.ts
tests/: setup.ts
(+110 files in other folders)
