[workspace]
resolver = "2"
members = [
  "crates/kiriko-model",
  "crates/kiriko-bundle",
  "crates/kiriko-route",
  "crates/kiriko-facilities",
  "crates/kiriko-node",
  "crates/kiriko-wasm",
]

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "UNLICENSED"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Errors
thiserror = "2"
# IMDF ingestion
zip = "8"
geojson = "0.24"
# Bundle codec
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
sha2 = "0.10"
# napi-rs server bindings (major 3 stack)
napi = "3"
napi-derive = "3"
napi-build = "2"
# WASM browser bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
