[package]
name = "kiriko-bundle"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic content-addressed Kiriko venue bundle (kvb1) codec."

[dependencies]
kiriko-model = { path = "../kiriko-model" }
kiriko-route = { path = "../kiriko-route" }
kiriko-facilities = { path = "../kiriko-facilities" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
postcard = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
# Network-generation geometry (medial-axis skeleton) — server-only, gated so
# the browser wasm build never pulls in the heavy computational-geometry deps.
geo = { version = "0.29", optional = true }
spade = { version = "2", optional = true }

[features]
netgen = ["dep:geo", "dep:spade"]

[dev-dependencies]
zip = { workspace = true }
