[package]
name = "kiriko-facilities"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Parse point-facility network GeoJSON into facilities with route-graph anchors."

[dependencies]
geojson.workspace = true
serde.workspace = true
serde_json.workspace = true
kiriko-route = { path = "../kiriko-route" }
