[package]
name = "kiriko-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Strict canonical IMDF venue model shared by Kiriko native and WASM adapters."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
geojson = { workspace = true }
