[package]
name = "kiriko-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Native Node.js bindings for Kiriko venue compilation (napi-rs)."

[lib]
crate-type = ["cdylib"]

[dependencies]
kiriko-model = { path = "../kiriko-model" }
kiriko-bundle = { path = "../kiriko-bundle", features = ["netgen"] }
napi = { workspace = true }
napi-derive = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }
